	* Re-structured all admin JavaScript for better organization and efficiency.
	* Re-structured all admin CSS for better organization and efficiency.
	* Removed all "fancy selects" styling on admin UI select menus; we're now relying on default WordPress styling.
* New: Added support for applying background shade to individual columns in the layout builder.
* Improvement: Swap TGMPA for [My Plugin Manager](http://mypluginmanager.com).
* Improvement: Better handling of retrieving FontAwesome icons for admin icon browser for more server setups, along with minor UI fixes.
* Fixed: WooCommerce deprecated use of `WC_Cart::get_cart_url`.
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* **Important:** If you have [template part files](http://dev.themeblvd.com/tutorial/template-parts-framework-2-5/) in your child theme, they MUST be moved into a directory named `template-parts`.

--------------------------------------------------------------

2.1.14 - 11/08/2017
-------------------

* **Updated Theme Blvd framework to 2.6.13**
* Improvement: Better consistency loading background video from YouTube and Vimeo.
* Improvement: Include all frontend functionality generally for better compatibility for third-party plugins that may be incorporating frontend components within the admin panel.
* Improvement: Added filter `themeblvd_editor_settings`, applied to settings passed to framework instances of `wp_editor()`.

--------------------------------------------------------------

2.1.13 - 09/19/2017
-------------------

* **Updated Theme Blvd framework to 2.6.12**
* Fixed: TinyMCE toolbar's dropdown menus not showing when the using Visual Editor within Theme Blvd Layout Builder.

--------------------------------------------------------------

2.1.12 - 09/11/2017
-------------------

* **Updated Theme Blvd framework to 2.6.11**